--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table2-d" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table2-d" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-xs-center">
-                        <h3 class="mbr-section-title display-2">WHAT OUR FANTASTIC USERS SAY</h3>
+                        <h3 class="mbr-section-title display-2">WHAT OUR FANTASTIC CUSTOMERS SAY</h3>
                         
                     </div>
                 </div>
