--- a/pricing.html
+++ b/pricing.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table2-d" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section mbr-after-navbar" id="pricing-table2-d" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -238,7 +238,7 @@
 Email: info@cleaningrescueteam.com<br>
 Phone: 301-717-6140<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black">The Party Rescue Team</a></li></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black"><strong>The Party Rescue Team</strong></a></li></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJJ-lqZk7Pt4kR35qyZagzhAA" allowfullscreen=""></iframe></div>
             </div>
