--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-9" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-9" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -118,7 +118,7 @@
 Email: info@cleaningrescueteam.com<br>
 Phone: 301-717-6140<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black"><strong>The Party Rescue Team</strong></a></li></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black">The Party Rescue Team</a></li></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJJ-lqZk7Pt4kR35qyZagzhAA" allowfullscreen=""></iframe></div>
             </div>
