--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="form1-i" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-i" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="CrG0OFmukN8Rd6DjKeoyQHCckSh/2SQgA3BxZKb6ykrxY6ioBl74C5m55mV6hJM1fGdvCvdtfSuhHtLHNPYMVURmr8Same81Zd9smrfnxBYg2lhQqHiZ+2notkkCMdZt" data-form-email="true">
+                        <input type="hidden" value="ebjGdqMrC7z9snl0EOqhpvCrtiFYMg/4gKu9G5jJX1e+tzS4ckMQfRogRt1J8BAPKWB25azfpXL8hssai26UP2opP3JA7g5//USkdfKKWKX9JiG6MlG+OawpbT/Fgs40" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -133,7 +133,7 @@
 Email: info@cleaningrescueteam.com<br>
 Phone: 301-717-6140<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black"><strong>The Party Rescue Team</strong></a></li></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black">The Party Rescue Team</a></li></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJJ-lqZk7Pt4kR35qyZagzhAA" allowfullscreen=""></iframe></div>
             </div>
