--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Careers</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-9" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-9" style="background-color: rgb(239, 239, 239);">
 
     
 
@@ -101,8 +101,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-6 lead"><h3>List of Services:</h3><ul><li>Full House Cleaning</li><li>Partial House Cleaning</li><li>Move Out Cleaning</li><li>Office Cleaning</li><li>After Party Clean Up</li></ul><h2></h2></div>
-            <div class="col-xs-12 col-md-6 lead"><p>We will provide flexible, and affordable cleaning services, tailored to fit your families needs. Whether you simply need a one time cleaning, or reoccuring visits, we'll be happy to make your home spick and span.</p><p><br></p><p>As stated on our list of servics, we also provide office cleanings, move out cleanings, and after party clean up services. Let our versatile cleaning teams put your mind at ease. We'll take care of the dirt and grime so that you don't have to.</p></div>
+            <div class="col-xs-12 col-md-6 lead"><h3>List of Services:</h3><ul><li>Full House Cleaning</li><li>Partial House Cleaning</li><li>Move Out Cleaning</li><li>Office Cleaning</li><li>After Party Clean Up</li></ul><p><br></p>We will provide flexible, and affordable cleaning services, tailored to fit your families needs. Whether you simply need a one time cleaning, or reoccuring visits, we'll be happy to make your home spick and span.<p><br></p><h2></h2></div>
+            <div class="col-xs-12 col-md-6 lead"><p><span style="line-height: 1.5;">As stated on our list of servics, we also provide office cleanings, move out cleanings, and after party clean up services. Let our versatile cleaning teams put your mind at ease. We'll take care of the dirt and grime so that you don't have to.</span></p><p><span style="line-height: 1.5;"><br></span></p><p><span style="line-height: 1.5;">We're thorough, giving special attention to designated areas to ensure that we leave your home clean and tidy every time.&nbsp;</span></p><p><span style="line-height: 1.5;"><br></span></p><pre><span style="line-height: 1.5;">&lt;center&gt;&lt;im src ="http://imgur.com/BGmJuDK"/&gt;&lt;/center&gt;</span></pre><p><span style="line-height: 1.5;">And we guarantee our work. If you're not satisfied, we will come back the next day, and reclean any area that you are unhappy with.&nbsp;</span><br></p></div>
         </div>
     </div>
 
