--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Careers</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="form1-i" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="form1-i" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT">
 
-                        <input type="hidden" value="ebjGdqMrC7z9snl0EOqhpvCrtiFYMg/4gKu9G5jJX1e+tzS4ckMQfRogRt1J8BAPKWB25azfpXL8hssai26UP2opP3JA7g5//USkdfKKWKX9JiG6MlG+OawpbT/Fgs40" data-form-email="true">
+                        <input type="hidden" value="zzjRFW3zSWpRrEa542S/HeKXiCr1YUBBmiIkHsrhbb/iCHOq2c1udEFgZldr12K+syiPfxOfOkFt1f8BQnHvj93PJ6y3W8DNHslPH7txp5JPA8y6R69Js8uP8BN1Cnxj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
