--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Careers</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1" style="background-color: rgb(239, 239, 239); padding-top: 200px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1" style="background-color: rgb(239, 239, 239); padding-top: 200px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -70,7 +70,7 @@
                   <h3 class="mbr-section-title display-2">Cleaning Solutions For All Of Your Needs</h3>
                   <div class="lead">
 
-                    <p>Come home to a clean living space when you choose Cleaning Rescue Team to provide your family with a flexible cleaning solution that fits your needs..</p>
+                    <p>Come home to a clean living space when you choose the Cleaning Rescue Team to provide your family with a flexible and affordable cleaning solution that fits your needs.</p>
 
                   </div>
 
