create github pages

--- a/pricing.html
+++ b/pricing.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Careers</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="about.html">About</a></li><li class="nav-item"><a class="nav-link link" href="pricing.html">Pricing</a></li><li class="nav-item"><a class="nav-link link" href="contact.html">Contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -238,7 +238,7 @@
 Email: info@cleaningrescueteam.com<br>
 Phone: 301-717-6140<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black">The Party Rescue Team</a></li></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Links</strong></p><ul><li><a href="http://www.thepartyrescueteam.com/" class="text-black">The Party Rescue Team</a></li><li><a href="careers.html" class="text-black">Careers</a></li></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJJ-lqZk7Pt4kR35qyZagzhAA" allowfullscreen=""></iframe></div>
             </div>
