create github pages

--- a/careers.html
+++ b/careers.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-q" style="background-color: rgb(204, 204, 204);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-q" style="background-color: rgb(204, 204, 204);">
 
     
 
@@ -165,7 +165,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Apply Here">
 
-                        <input type="hidden" value="zZGuiJI3CuntvkLVE/wVmPyogzE8jcwvRe5Yzlkp6qKqPnP2WtQrWvzxzH61+rRRn8lF23C8orZ8RGiHmXzn43fcahLlU6pRER/7xuNAZsPsD6Be7HG+fJtMWzVg8D2o" data-form-email="true">
+                        <input type="hidden" value="bmKugEXQl3Xlnwaq3ZLBNGF/7GGvyVY9CFyvVfUsaVrK9jyxwfiUx/NvPDiQsQXfVqK3zYQqL+FgEJyrbDtDwrCLYctXbxy7ZCFkQuUDEWlWMPZUlvIQPtt4e5UB6I1D" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -227,7 +227,7 @@ Phone: 301-717-6140<br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-l" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2017 Cleaning Rescue Team. BlaqCode Solutions</p>
+        <p class="text-xs-center">Terms - Privacy &nbsp; &nbsp;Copyright (c) 2017 Cleaning Rescue Team. BlaqCode Solutions</p>
     </div>
 </footer>
 
