--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1" style="background-color: rgb(239, 239, 239); padding-top: 200px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Generator</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1" style="background-color: rgb(239, 239, 239); padding-top: 200px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -112,7 +112,7 @@ Phone: 301-717-6140<br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-l" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2017 Cleaning Rescue Team. BlaqCode Solutions</p>
+        <p class="text-xs-center">Terms - Privacy &nbsp; &nbsp;Copyright (c) 2017 Cleaning Rescue Team. BlaqCode Solutions</p>
     </div>
 </footer>
 
